# LearnAI

./: readme.md
0.base/: readme.md
1.base/: readme.md
2.GenAlgorithm/: readme.md
3.Classical/: readme.md
3.Classical/1.ppf/: readme.md
3.Classical/1.ppf/demo/: CMakeLists.txt
4.ML/: readme.md
